--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,12 +3,12 @@
    <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mind's Academy</title>
+  <title>Minds' Academy</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/../assets/img/logominds.PNG" rel="icon">
+  <link href="/../assets/img/logo.png" rel="icon">
   <link href="/../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -40,7 +40,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="/">Mind's Academy</a></h1>
+      <h1 class="logo mr-auto"><a href="/">Minds' Academy</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -111,43 +111,41 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Mind's Academy</h3>
+            <h3>Minds' Academy</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              
+              <br><br>
+              <strong>Phone:</strong> +216 95 624 160 <br>
+              <strong>Email:</strong> minds.academy13@gmail.com<br>
             </p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Liens Utiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{{path('app_register')}}">Creer un compte </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.youtube.com/channel/UChPeMrbrmd3ZOOotuH2Y63Q">Chaine Youtube </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/niveau/list">Nos Cours</a></li>
+             
              
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4> Nos Services </h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> Devenir un bon Matheux</li>
+              <li><i class="bx bx-chevron-right"></i> Devenir un bon codeur</li>
+              <li><i class="bx bx-chevron-right"></i> Devenir un bon developpeur web</li>
+           
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+            <h4>Nous rejoindre </h4>
+            <p></p>
+            <form action="{{path('app_register')}}" method="post">
+              <input type="email" name="email"><input type="submit" value="S'inscrire">
             </form>
           </div>
 
@@ -166,15 +164,16 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
-          Developped  by <a href="https://www.linkedin.com/in/racha-aoun-634aa7169/">Racha Aoun</a>
+         
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+       
+        <a href="https://www.facebook.com/Mindsacademy13" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.youtube.com/channel/UChPeMrbrmd3ZOOotuH2Y63Q" class="youtube"><i class="bx bxl-youtube"></i></a>
+       {# <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>#}
+        <a href="https://www.instagram.com/ouday.benabid/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/Mindsacademy13" class="facebook"><i class="bx bxl-facebook"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
