--- a/templates/cours/paiement.html.twig
+++ b/templates/cours/paiement.html.twig
@@ -6,20 +6,20 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="../../assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="../../assets/img/paiement.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>paiement </h3>
+            <h3>Paiement </h3>
             <p class="font-italic">
-            Pour pouvoir se bénificier de ce cours veillez procéder au paiement 
+            Pour pouvoir se bénéficier de ce cours veillez procéder au paiement 
             </p>
             <ul>
               <li><i class="icofont-check-circled"></i> Notre numéro: 95 624 160.</li>
-              <li><i class="icofont-check-circled"></i> Notre Messenger : .</li>
-              <li><i class="icofont-check-circled"></i>  Notre Page Web : .</li>
+              {#<li><i class="icofont-check-circled"></i> Notre Messenger : .</li>#}
+              <li><i class="icofont-check-circled"></i>  Notre Page Facebook :  <a href="https://www.facebook.com/Mindsacademy13">Minds' Academy</a></li>
             </ul>
             <p>
-              Minds Academy : Plus qu'une académie .
+              Minds Academy : On vous garantit l'excellence  .
             </p>
 
           </div>
