--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -15,24 +15,22 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="../assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/a propos.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Minds' Académie</h3>
+            <h3>Minds' Académy </h3>
             <p class="font-italic">
               Minds'Academy est une Plateforme spécialisée dans le domaine d'IT , qui met à la disposition des étudiants : des tutoriels , des Cours et des exos de Programmation ( C , C++ , JAVA , Python..) , de Réseau et de Mathématique qui leur aident à améliorer leurs capacités. Dans le cadre de son opération , Outre l'accès gratuit à la plateforme, , On met à votre disposition des tuteurs particuliers pour vous aider à améliorer votre niveaux à travers la bonne gestion des groupes en diffusant le contenu d'une Manière simple et instructive .
 
- ** L'académie est accessible gratuitement.
- ** Des cours et des tutoriels de qualités vous attendent.
- ** Les formations sont disponibles en ligne en présentiel.
+ 
             </p>
             <ul>
-              <li><i class="icofont-check-circled"></i> ** L'académie est accessible gratuitement.</li>
-              <li><i class="icofont-check-circled"></i> ** Des cours et des tutoriels de qualités vous attendent.</li>
-              <li><i class="icofont-check-circled"></i> ** Les formations sont disponibles en ligne en présentiel.</li>
+              <li><i class="icofont-check-circled"></i>  L'académie est accessible gratuitement.</li>
+              <li><i class="icofont-check-circled"></i>  Des cours et des tutoriels de qualités vous attendent.</li>
+              <li><i class="icofont-check-circled"></i>  Les formations sont disponibles en ligne en présentiel.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              
             </p>
 
           </div>
@@ -53,17 +51,17 @@
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">64</span>
+            <span data-toggle="counter-up">50</span>
             <p>Courses</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">42</span>
+            <span data-toggle="counter-up">5</span>
             <p>Events</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">15</span>
+            <span data-toggle="counter-up">10</span>
             <p>Trainers</p>
           </div>
 
@@ -85,12 +83,12 @@
 
           <div class="testimonial-wrap">
             <div class="testimonial-item">
-              <img src="../assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Aziz Slim</h3>
-              <h4>Ceo &amp; Founder</h4>
+              <img src="../assets/img/testimonials/aziz slim.jpg" class="testimonial-img" alt="">
+              <h3><a href="https://www.facebook.com/aziz.slim.923" style="color:black">Aziz Slim</a></h3>
+              <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                J'ai pu améliorer mon niveau en Mathématique avec séances de révisions fournies par la plateforme.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -98,12 +96,12 @@
 
           <div class="testimonial-wrap">
             <div class="testimonial-item">
-              <img src="../assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Fakhri Souibgui</h3>
-              <h4>Designer</h4>
+              <img src="../assets/img/testimonials/maryem ajmaoui.jpg" class="testimonial-img" alt="">
+              <h3><a href="https://www.facebook.com/profile.php?id=100008387473149" style="color : black">Maryem Ajmaoui</a></h3>
+              <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                J'ai pu facilement surmonter mes ambiguités en Mathématique grace à la Pedagogie offerte pas la plateforme .
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -111,12 +109,12 @@
 
           <div class="testimonial-wrap">
             <div class="testimonial-item">
-              <img src="../assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Nour Thraya</h3>
-              <h4>Store Owner</h4>
+              <img src="../assets/img/testimonials/malek ben abbes.jpg" class="testimonial-img" alt="">
+              <h3>Malek Ben Abbes</h3>
+              <h4></h4>
                <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                Grace aux Pack de Mathématique j'ai pu réussir tous mes examens de Maths .
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p> 
             </div>
@@ -124,29 +122,29 @@
 
           <div class="testimonial-wrap">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3></h3>
-              <h4>Freelancer</h4>
+              <img src="assets/img/testimonials/nour thraya.jpg" class="testimonial-img" alt="">
+              <h3>Nour Thraya</h3>
+              <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                J'ai assisté aux séances de Programmation C et j 'ai pu facilement avoir une bonne Note .
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
           </div>
 
-          <div class="testimonial-wrap">
+          {#<div class="testimonial-wrap">
             <div class="testimonial-item">
-              <img src="../assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+              <img src="../assets/img/testimonials/ahmed mtibaa.jpg" class="testimonial-img" alt="">
               <h3>Ahmed Mtibaa</h3>
-              <h4>Entrepreneur</h4>
+              <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+               Les cours sont Sublimes !
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
-          </div>
+          </div> #}
 
         </div>
 
