--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Minds' Academy </h1>
-      <h2>Votre nouvelle Plateforme d'IT   </h2>
+      <h2>Votre nouvelle plateforme d'éducation   </h2>
       {% if  app.user == null %}
       <a href="{{path('app_register')}}" class="btn-get-started">Créer Un Compte Gratuit</a>
       {% endif %}
@@ -27,28 +27,24 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/prof.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Minds' Academy </h3>
             <p class="font-italic">
-             Minds'Academy est une Plateforme spécialisée dans le domaine d'IT , qui met
-à la disposition des étudiants : des tutoriels , des Cours et des exos de Programmation ( C , C++ , JAVA , Python..) , 
-de Réseau et  de Mathématique  qui leur aident à améliorer leurs capacités.
+       Minds' Academy est une plateforme d’enseignement et  d’apprentissage en ligne destinée à tout 
+       le monde. Les cours sont tutorés par des experts à travers des vidéos et des visioconférences 
+       et restent accessibles en replay sans limite de temps.
 
 
-Dans le cadre de son opération , Outre l'accès gratuit à la plateforme,
-, On met à votre disposition des tuteurs particuliers pour vous aider à améliorer votre niveaux à travers la bonne gestion des 
-groupes en diffusant le contenu d'une Manière simple et instructive  .
- 
 
 
 
             </p>
             <ul>
-              <li><i class="icofont-check-circled"></i> ** L'académie est accessible gratuitement.</li>
-              <li><i class="icofont-check-circled"></i> ** Des cours et des tutoriels  de qualités vous attendent.</li>
-              <li><i class="icofont-check-circled"></i> ** Les formations sont disponibles en ligne en présentiel.</li>
+              <li><i class="icofont-check-circled"></i>  L'académie est accessible gratuitement.</li>
+              <li><i class="icofont-check-circled"></i>  Des cours et des tutoriels  de qualités vous attendent.</li>
+              <li><i class="icofont-check-circled"></i>  Les formations sont disponibles en ligne et en présentiel.</li>
             </ul>
             
           </div>
@@ -95,8 +91,8 @@ groupes en diffusant le contenu d'une Manière simple et instructive  .
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
-              <h3>Pourquoi Choisir Minds Academy?</h3>
-              <p>Grace à la diversité 
+              <h3>Pourquoi Choisir Minds' Academy ?</h3>
+              <p> 
               </p>
               <div class="text-center">
                 
@@ -108,26 +104,25 @@ groupes en diffusant le contenu d'une Manière simple et instructive  .
               <div class="row">
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4> Projet Web  sit</h4>
-                    <p>Vos sites et projets Web  </p>
+                    <i class="bx bx-book-bookmark"></i>
+                    <h4> Des formations Excellentes </h4>
+                    <p>  </p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4> Mathématique </h4>
-                    <p>Les Mathématique ...</p>
+                    <i class="bx bx-male"></i>
+                    <h4> Des tuteurs professionnels </h4>
+                    <p></p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
-                    {# <i class="bx bx-images"></i> #}
+                     <i class="bx bx-pencil"></i> 
                  
-                    <img src="../assets/img/testimonials/testimonials-3.jpg" class="user-avatar rounded-circle" alt="" width="50px">
-                 <br><br>
-                    <h4>Programmation et Réseau </h4>
-                    <p>La programmation et réseau sont</p>
+                         <br><br>
+                    <h4> Un enseignement adapté au rythme de chaque Etudiant </h4>
+                    <p></p>
                   </div>
                 </div>
               </div>
