--- a/templates/enseignant/index.html.twig
+++ b/templates/enseignant/index.html.twig
@@ -12,7 +12,7 @@
                 <th>Email</th>
                 <th>Nom</th>
                 <th>Prenom</th>
-                <th>Image</th>
+                <th>Imag********e</th>
                 <th>actions</th>
             </tr>
         </thead>
