--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -119,7 +119,7 @@
                         </ul>
                     </li>
                     <li >
-                        <a href="{{path('etudiant')}}" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Gestion Etudiants</a>
+                        <a href="{{path('etudiant_index')}}" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Gestion Etudiants</a>
                      
                     </li>
                     
