--- a/templates/etudiant/new.html.twig
+++ b/templates/etudiant/new.html.twig
@@ -1,11 +1,35 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseadmin.html.twig' %}
 
 {% block title %}Etudiant{% endblock %}
 
 {% block body %}
     <h1>Confirmation Ajout</h1>
 
-    {{ include('etudiant/_form.html.twig') }}
+     <style>
+#center{
+    margin-left:20%;
+}
+ </style>
+ 
+ <div class="row" id="center">
+   <div class="col-lg-6">
+   <div class="card">
+          <div class="card-header" style="background-color:green;color:white">
+               <strong class="card-title" style="background-color:green;color:white">Confirmation </strong>
+           </div>
+           <div class="card-body">
+                                <!-- Credit Card -->
+            <div id="pay-invoice">
+             <div class="card-body">
+             <div class="card-title">
+              <h3 class="text-center">Etudiant</h3>
+             </div>
+             <hr>
+{{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn">{{ button_label|default('Confirmer Ajout') }}</button>
+{{ form_end(form) }}
+
 
     <a href="{{ path('etudiant_index') }}">retour</a>
 {% endblock %}
