--- a/templates/etudiant/index.html.twig
+++ b/templates/etudiant/index.html.twig
@@ -49,7 +49,7 @@
                                              <span class="badge badge-complete">
                     <a href="{{ path('user_show', {'id': etudiant.id}) }}">Voir</a></span>
                      <span class="badge badge-complete">
-                    <a href="{{ path('user_edit', {'id': etudiant.id}) }}">Modifier</a>
+                    <a href="{{ path('user_editt', {'id': etudiant.id}) }}">Modifier</a>
                                                </span>
                                             </td>
                                         </tr>
