--- a/templates/etudiant/show.html.twig
+++ b/templates/etudiant/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseadmin.html.twig' %}
 
 {% block title %}Etudiant{% endblock %}
 
@@ -27,6 +27,7 @@
                 <th>Image</th>
                 <td>{{ etudiant.image }}</td>
             </tr>
+              
         </tbody>
     </table>
 
