--- a/templates/user/etudiant_list.html.twig
+++ b/templates/user/etudiant_list.html.twig
@@ -43,16 +43,19 @@
                                              <td>  <span class="name">{{ enseignant.prenom }}</span> </td>
                                               <td>  <span class="name">{{ enseignant.email }}</span> </td>
                       
-                                            <td>
+                                           
+                                           
+                                           
+                                             <td>
                                              <span class="badge badge-complete">
                     <a href="{{ path('user_show', {'id': enseignant.id}) }}">Voir</a></span>
                      <span class="badge badge-complete">
                     <a href="{{ path('user_edit', {'id': enseignant.id}) }}">Modifier</a>
                                                </span>
                                             </td>
+
                                         </tr>
-                                       
-                                       
+                                       {% while enseignant.roles == '["ROLE_USER"]' %}
                                        
                                        {% endfor %}
                                     </tbody>
