--- a/templates/cours/index.html.twig
+++ b/templates/cours/index.html.twig
@@ -16,7 +16,7 @@
                             </div>
                           
                             {% for cour in cours %}
-                              <strong class="card-title">{{cour.matiere.titre}} </strong>
+                              <strong class="card-title">{{cour.matiere.titre}} - {{cour.niveau.niveau}} </strong> 
                             <div class="table-stats order-table ov-h">
                                 <table class="table ">
                                     <thead>
