--- a/templates/video/show.html.twig
+++ b/templates/video/show.html.twig
@@ -19,6 +19,14 @@
                 <th>Video</th>
                 <td>{{ video.video }}</td>
             </tr>
+                        <tr>
+                <th>Lien</th>
+                <td>{{ video.lienvideo }}</td>
+            </tr>
+                        <tr>
+                <th>Cours</th>
+                <td>{{ video.cours.titre }}</td>
+            </tr>
         </tbody>
     </table>
 
