--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -20,6 +20,7 @@
                 <th>Id</th>
                 <th>Titre</th>
                 <th>lien video</th>
+                <th>Cours</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -29,6 +30,7 @@
                 <td>{{ video.id }}</td>
                 <td>{{ video.titre }}</td>
                 <td><a href="{{ video.lienvideo }}">{{ video.lienvideo }}</a></td>
+                <td>{{ video.cours.titre }}</td>
                 <td>
                     <a href="{{ path('video_show', {'id': video.id}) }}">show</a>
                     <a href="{{ path('video_edit', {'id': video.id}) }}">edit</a>
