--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -10,7 +10,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <strong class="card-title">Cours PDF</strong>
+                                <strong class="card-title">Video</strong>
                             </div>
                             <div class="table-stats order-table ov-h">
 
