--- a/templates/user/enseignant_list.html.twig
+++ b/templates/user/enseignant_list.html.twig
@@ -12,7 +12,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <strong class="card-title">Les Enseignants</strong>
+                                <strong class="card-title">{{nbEnseignant}} Enseignants</strong>
                             </div>
                             <div class="table-stats order-table ov-h">
                                 <table class="table ">
