--- a/templates/user/etudiant_list.html.twig
+++ b/templates/user/etudiant_list.html.twig
@@ -12,8 +12,9 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <strong class="card-title">Les Etudiants</strong>
+                                 <strong class="card-title"> {{nbEtudiant}} Etudiants </strong>
                             </div>
+                            
                             <div class="table-stats order-table ov-h">
                                 <table class="table ">
                                     <thead>
